crates/vexor-compiler/tests/golden/error/output/move_arity.err
parse error at line 3, column 24
  |
3 | let moved = move(50, c)
  |                        ^
expected expected three arguments